--- a/app/views/muestra/index.html.erb
+++ b/app/views/muestra/index.html.erb
@@ -1011,59 +1011,64 @@
         <tr>
           <td scope="row"> ASOCIACIÓN INDÍGENA DEL CAUCA </td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>471</td>
+          <td><%= (100* total/471.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "ASOCIACIÓN INDÍGENA DEL CESAR Y LA GUAJIRA  DUSAKAWI").count(:id) %>
         <tr>
           <td scope="row"> ASOCIACIÓN INDÍGENA DEL CESAR Y LA GUAJIRA  DUSAKAWI </td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>428</td>
+          <td><%= (100* total/428.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "ASOCIACIÓN MUTUAL BARRIOS UNIDOS DE QUIBDÓ E.S.S.").count(:id) %>
         <tr>
           <td scope="row"> ASOCIACIÓN MUTUAL BARRIOS UNIDOS DE QUIBDÓ E.S.S. </td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>432</td>
+          <td><%= (100* total/432.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "ASOCIACIÓN MUTUAL EMPRESA SOLIDARIA DE SALUD DE NARIÑO E.S.S. EMSSANAR E.S.S.").count(:id) %>
         <tr>
           <td scope="row"> ASOCIACIÓN MUTUAL EMPRESA SOLIDARIA DE SALUD DE NARIÑO E.S.S. EMSSANAR E.S.S. </td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>566</td>
+          <td><%= (100* total/566.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "ASOCIACIÓN MUTUAL LA ESPERANZA ASMET  SALUD").count(:id) %>
-        <tr>ASOCIACIÓN MUTUAL LA ESPERANZA ASMET  SALUD </td>
+        <tr>
+          <td>ASOCIACIÓN MUTUAL LA ESPERANZA ASMET  SALUD </td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>769</td>
+          <td><%= (100* total/769.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "ASOCIACIÓN MUTUAL SER EMPRESA SOLIDARIA DE SALUD ESS").count(:id) %>
-        <tr>ASOCIACIÓN MUTUAL SER EMPRESA SOLIDARIA DE SALUD ESS</td>
+        <tr>
+          <td>ASOCIACIÓN MUTUAL SER EMPRESA SOLIDARIA DE SALUD ESS</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>431</td>
+          <td><%= (100* total/431.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR  DE CARTAGENA COMFAMILIAR CARTAGENA").count(:id) %>
-        <tr>CAJA DE COMPENSACIÓN FAMILIAR  DE CARTAGENA COMFAMILIAR CARTAGENA</td>
+        <tr>
+          <td>CAJA DE COMPENSACIÓN FAMILIAR  DE CARTAGENA COMFAMILIAR CARTAGENA</td>
           <td><%= total %></td>
           <td>426</td>
           <td><%= (100* total/426.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR C.C.F. DEL ORIENTE COLOMBIANO COMFAORIENTE").count(:id) %>
-        <tr>CAJA DE COMPENSACIÓN FAMILIAR C.C.F. DEL ORIENTE COLOMBIANO COMFAORIENTE</td>
+        <tr>
+          <td>CAJA DE COMPENSACIÓN FAMILIAR C.C.F. DEL ORIENTE COLOMBIANO COMFAORIENTE</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>424</td>
+          <td><%= (100* total/424.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACION FAMILIAR DE CORDOBA  COMFACOR").count(:id) %>
-        <tr>CAJA DE COMPENSACION FAMILIAR DE CORDOBA  COMFACOR</td>
+        <tr>
+          <td>CAJA DE COMPENSACION FAMILIAR DE CORDOBA  COMFACOR</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>431</td>
+          <td><%= (100* total/431.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR DE CUNDINAMARCA COMFACUNDI").count(:id) %>
         <tr>CAJA DE COMPENSACIÓN FAMILIAR DE CUNDINAMARCA COMFACUNDI</td>
@@ -1072,178 +1077,200 @@
           <td><%= (100* total/426.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR DE LA GUAJIRA").count(:id) %>
-        <tr>CAJA DE COMPENSACIÓN FAMILIAR DE LA GUAJIRA</td>
+        <tr>
+          <td>CAJA DE COMPENSACIÓN FAMILIAR DE LA GUAJIRA</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>425</td>
+          <td><%= (100* total/425.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR DE NARIÑO COMFAMILIAR NARIÑO").count(:id) %>
-        <tr>CAJA DE COMPENSACIÓN FAMILIAR DE LA GUAJIRA</td>
+        <tr>
+          <td>CAJA DE COMPENSACIÓN FAMILIAR DE LA GUAJIRA</td>
           <td><%= total %></td>
           <td>426</td>
           <td><%= (100* total/426.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR DE SUCRE").count(:id) %>
-        <tr>CAJA DE COMPENSACIÓN FAMILIAR DE SUCRE</td>
+        <tr>
+          <td>CAJA DE COMPENSACIÓN FAMILIAR DE SUCRE</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>424</td>
+          <td><%= (100* total/424.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR DEL CHOCÓ COMFACHOCO").count(:id) %>
-        <tr>CAJA DE COMPENSACIÓN FAMILIAR DEL CHOCÓ COMFACHOCO</td>
+        <tr>
+          <td>CAJA DE COMPENSACIÓN FAMILIAR DEL CHOCÓ COMFACHOCO</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>425</td>
+          <td><%= (100* total/425.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE COMPENSACIÓN FAMILIAR DEL HUILA COMFAMILIAR").count(:id) %>
-        <tr>CAJA DE COMPENSACIÓN FAMILIAR DEL HUILA COMFAMILIAR</td>
+        <tr>
+          <td>CAJA DE COMPENSACIÓN FAMILIAR DEL HUILA COMFAMILIAR</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>429</td>
+          <td><%= (100* total/429.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAJA DE DE COMPENSACION FAMILIAR  CAJACOPI ATLANTICO").count(:id) %>
-        <tr>CAJA DE DE COMPENSACION FAMILIAR  CAJACOPI ATLANTICO</td>
+        <tr>
+          <td>CAJA DE DE COMPENSACION FAMILIAR  CAJACOPI ATLANTICO</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>433</td>
+          <td><%= (100* total/433.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAPITAL SALUD").count(:id) %>
-        <tr>CAPITAL SALUD</td>
+        <tr>
+          <td>CAPITAL SALUD</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>430</td>
+          <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CAPRESOCA  EPS").count(:id) %>
-        <tr>CAPRESOCA  EPS</td>
+        <tr>  
+          <td>CAPRESOCA  EPS</td>
           <td><%= total %></td>
           <td>426</td>
           <td><%= (100* total/426.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "COMFENALCO  VALLE  E.P.S.").count(:id) %>
-        <tr>COMFENALCO  VALLE  E.P.S.</td>
+        <tr>
+          <td>COMFENALCO  VALLE  E.P.S.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>427</td>
+          <td><%= (100* total/427.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "COMPENSAR   E.P.S.").count(:id) %>
-        <tr>COMPENSAR   E.P.S.</td>
+        <tr>
+          <td>COMPENSAR   E.P.S.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>430</td>
+          <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "COOMEVA   E.P.S.  S.A.").count(:id) %>
-        <tr>COOMEVA   E.P.S.  S.A.</td>
+        <tr>
+          <td>COOMEVA   E.P.S.  S.A.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>487</td>
+          <td><%= (100* total/487.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "COOPERATIVA DE SALUD COMUNITARIA-COMPARTA").count(:id) %>
-        <tr>COOPERATIVA DE SALUD COMUNITARIA-COMPARTA</td>
+        <tr>
+          <td>COOPERATIVA DE SALUD COMUNITARIA-COMPARTA</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>605</td>
+          <td><%= (100* total/605.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "COOPERATIVA DE SALUD Y DESARROLLO INTEGRAL ZONA SUR ORIENTAL DE CARTAGENA LTDA. COOSALUD E.S.S.").count(:id) %>
-        <tr>COOPERATIVA DE SALUD Y DESARROLLO INTEGRAL ZONA SUR ORIENTAL DE CARTAGENA LTDA. COOSALUD E.S.S.</td>
+        <tr>
+          <td>COOPERATIVA DE SALUD Y DESARROLLO INTEGRAL ZONA SUR ORIENTAL DE CARTAGENA LTDA. COOSALUD E.S.S.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>795</td>
+          <td><%= (100* total/795.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "CRUZ BLANCA  EPS S.A.").count(:id) %>
-        <tr>CRUZ BLANCA  EPS S.A.</td>
+        <tr>
+          <td>CRUZ BLANCA  EPS S.A.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>430</td>
+          <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "E.P.S.  FAMISANAR  LTDA.").count(:id) %>
-        <tr>E.P.S.  FAMISANAR  LTDA.</td>
+        <tr>
+          <td>E.P.S.  FAMISANAR  LTDA.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>435</td>
+          <td><%= (100* total/435.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "E.P.S.  SANITAS  S.A.").count(:id) %>
-        <tr>E.P.S.  SANITAS  S.A.</td>
+        <tr>
+          <td>E.P.S.  SANITAS  S.A.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>663</td>
+          <td><%= (100* total/663.to_f).round(2) %></td>
         </tr>
-        <% total = Encuestum.where(municipio: "EMPRESA MUTUAL PARA EL DESARROLLO INTEGRAL  DE LA SALUD E.S.S.").count(:id) %>
-        <tr>EMPRESA MUTUAL PARA EL DESARROLLO INTEGRAL  DE LA SALUD E.S.S.</td>
+        <% total = Encuestum.where(municipio: "EMPRESA MUTUAL PARA EL DESARROLLO INTEGRAL  DE LA SALUD E.S.S. EMDISALUD ESS").count(:id) %>
+        <tr>
+          <td>EMPRESA MUTUAL PARA EL DESARROLLO INTEGRAL  DE LA SALUD E.S.S.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
-        </tr>
-        <% total = Encuestum.where(municipio: "EMDISALUD ESS").count(:id) %>
-        <tr>EMDISALUD ESS</td>
-          <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>432</td>
+          <td><%= (100* total/432.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "ENTIDAD COOPERATIVA SOL.DE SALUD DEL NORTE DE SOACHA ECOOPSOS").count(:id) %>
-        <tr>ENTIDAD COOPERATIVA SOL.DE SALUD DEL NORTE DE SOACHA ECOOPSOS</td>
+        <tr>
+          <td>ENTIDAD COOPERATIVA SOL.DE SALUD DEL NORTE DE SOACHA ECOOPSOS</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>430</td>
+          <td><%= (100* total/430.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "EPS  CONVIDA").count(:id) %>
-        <tr>EPS  CONVIDA</td>
+        <tr>
+          <td>EPS  CONVIDA</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>428</td>
+          <td><%= (100* total/428.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "EPS SERVICIO OCCIDENTAL DE SALUD  S.A. - EPS S.O.S. S.A.").count(:id) %>
-        <tr>EPS SERVICIO OCCIDENTAL DE SALUD  S.A. - EPS S.O.S. S.A.</td>
+        <tr>
+          <td>EPS SERVICIO OCCIDENTAL DE SALUD  S.A. - EPS S.O.S. S.A.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>453</td>
+          <td><%= (100* total/453.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "EPS Y MEDICINA PREPAGADA SURAMERICANA S.A").count(:id) %>
-        <tr>EPS Y MEDICINA PREPAGADA SURAMERICANA S.A</td>
+        <tr>
+          <td>EPS Y MEDICINA PREPAGADA SURAMERICANA S.A</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>464</td>
+          <td><%= (100* total/464.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "MALLAMAS").count(:id) %>
-        <tr>MALLAMAS</td>
+        <tr>
+          <td>MALLAMAS</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>914</td>
+          <td><%= (100* total/914.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "MEDIMAS").count(:id) %>
-        <tr>MEDIMAS</td>
+        <tr>
+          <td>MEDIMAS</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>1200</td>
+          <td><%= (100* total/1200.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "NUEVA EPS S.A.").count(:id) %>
-        <tr>NUEVA EPS S.A.</td>
+        <tr>
+          <td>NUEVA EPS S.A.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>2266</td>
+          <td><%= (100* total/2266.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "PIJAOS SALUD EPSI").count(:id) %>
-        <tr>PIJAOS SALUD EPSI</td>
+        <tr>
+          <td>PIJAOS SALUD EPSI</td>
           <td><%= total %></td>
           <td>426</td>
           <td><%= (100* total/426.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "SALUD  TOTAL  S.A.  E.P.S.").count(:id) %>
-        <tr>SALUD  TOTAL  S.A.  E.P.S.</td>
+        <tr>
+          <td>SALUD  TOTAL  S.A.  E.P.S.</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>469</td>
+          <td><%= (100* total/469.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "SALUDVIDA S.A .E.P.S").count(:id) %>
-        <tr>SALUDVIDA S.A .E.P.S</td>
+        <tr>
+          <td>SALUDVIDA S.A .E.P.S</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>496</td>
+          <td><%= (100* total/496.to_f).round(2) %></td>
         </tr>
         <% total = Encuestum.where(municipio: "SAVIA SALUD EPS").count(:id) %>
-        <tr>SAVIA SALUD EPS</td>
+        <tr>
+          <td>SAVIA SALUD EPS</td>
           <td><%= total %></td>
-          <td>426</td>
-          <td><%= (100* total/426.to_f).round(2) %></td>
+          <td>429</td>
+          <td><%= (100* total/429.to_f).round(2) %></td>
         </tr>
         <thead>
           <tr>
